--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>FocusFlow | AI Tasks</title>
+  
   <script src="https://cdn.tailwindcss.com"></script>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
   <style>
     * {
       -webkit-tap-highlight-color: transparent;
@@ -31,25 +35,24 @@
     .dark .custom-scrollbar::-webkit-scrollbar-thumb {
       background: #475569;
     }
-    /* Smooth transition for dark mode */
     .theme-transition {
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
+    /* White screen fix during load */
+    #root:empty {
+      background: #f8fafc;
+      min-height: 100vh;
+    }
+    .dark #root:empty {
+      background: #020617;
+    }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
+  
   <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+
+  <script type="module" src="/index.tsx"></script>
+
 </body>
 </html>
